# npu_compiler

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md
src/: CMakeLists.txt
src/mlir_runtime/: CMakeLists.txt  npu_mlir_runtime.cpp
src/mlir_runtime/level_zero_wrapper/: CMakeLists.txt  level_zero_wrapper.cpp  level_zero_wrapper.h
src/npu_interpreter_runtime/: CMakeLists.txt
src/npu_interpreter_runtime/src/: npu_interpreter_runtime.cpp
src/vpux_compiler/: CMakeLists.txt  compiler.exports
src/vpux_compiler/cmake/: add_npu_library.cmake  vpux_tblgen.cmake
src/vpux_compiler/docs/: code_style.md  compilation_pipelines.md  sw_layer_enabling.md
src/vpux_compiler/src/: CMakeLists.txt  compiler.cpp  compiler_export.cpp  compiler_version.cpp  init.cpp  interfaces_registry.cpp  options_mapper.cpp  passes_register.cpp  pipelines_register.cpp  precomp.hpp  precomp_llvm.hpp  precomp_stl.hpp  tool_registration.cpp
src/vpux_compiler/tblgen/: CMakeLists.txt
src/vpux_driver_compiler/: CHANGES.txt  CMakeLists.txt  README.md
src/vpux_driver_compiler/cmake/: build_manifest.cmake  build_manifest.json.in  install_target_with_debug_files.cmake
src/vpux_driver_compiler/docs/: FAQ.md  api_reference.md  how_to_build_driver_compiler_on_linux.md  how_to_build_driver_compiler_on_windows.md  how_to_build_driver_compiler_withCmakePresets_on_linux.md  how_to_build_driver_compiler_withCmakePresets_on_windows.md  how_to_debug.md  how_to_debug_with_deprecated_version.md  how_to_test.md  how_to_test_with_deprecated_version.md  prebuild.md  requirements.md
src/vpux_driver_compiler/include/: npu_driver_compiler.h  vcl_common.hpp  vcl_compiler.hpp  vcl_compiler_loader.hpp  vcl_deserializer.hpp  vcl_executable.hpp  vcl_logger.hpp  vcl_profiling.hpp  vcl_query_network.hpp  xml_deserializer.hpp
src/vpux_driver_compiler/src/: CMakeLists.txt
src/vpux_driver_compiler/test/: CMakeLists.txt  compilerTest.c  loaderTest.cpp
src/vpux_elf/tests/: act-kernel.mlir  nncmx-two-dma-barrier-elf.mlir  one-dma-elf.mlir  two-dma-barrier-elf.mlir  two-dma-ports.mlir
src/vpux_utils/: CMakeLists.txt
src/vpux_utils/include/: precomp_llvm.hpp  precomp_mlir.hpp  precomp_ov.hpp  precomp_stl.hpp
src/vpux_utils/src/: CMakeLists.txt  precomp.hpp
sw_runtime_kernels/kernels/: CMakeLists.txt
sw_runtime_kernels/kernels/cmake/: embed_shave_binaries.cmake  mv_tools.cmake
sw_runtime_kernels/kernels/inc/: common_types.h  dpu_shave_drv.hpp  param_copy.hpp  param_dma_submission.h  param_dynamic_data_mask.h  param_experimental_detectron_roi_feature_extractor.h  param_gru_gates.h  param_rope.h  param_sdpa.h  sdpa_utils.hpp
sw_runtime_kernels/kernels/prebuild/: shave_rt_kernel.ld
tests/functional/: CMakeLists.txt  core_config.cpp  main.cpp  precomp.hpp
tests/functional/behavior/: compilation_for_different_platforms.cpp  compilation_pipeline_cfg_consistency.cpp  dynamic_strides.cpp  elf_config.cpp  infer_request_with_element_type.cpp  profiling.cpp  work_with_devices.cpp  work_with_devices.hpp
tests/functional/common/: functions.cpp  functions.h  npu_test_env_cfg.cpp  npu_test_env_cfg.hpp  print_test_case_name.hpp  quantization_utils.cpp  quantization_utils.hpp  random_generator.cpp  random_generator.hpp  tensor_comparison.cpp  tensor_comparison.hpp  tensor_comparison_tests.cpp  tensor_view.hpp  utils.cpp  utils.hpp
tests/functional/compile/: conftest.py  test_compile.py  test_infer_compiled.py
tests/functional/imd_tests/: CMakeLists.txt  test_constants.cpp
tests/functional/shared_tests_instances/: ci_compliant_name.hpp  magic_enum.hpp  npu_skip_func_tests.xml  pretty_test_arguments.cpp  pretty_test_arguments.hpp  set_device_name.cpp  skip_tests.xml  skip_tests_config.cpp  vpu_ov2_layer_test.cpp  vpu_ov2_layer_test.hpp  vpu_test_report.cpp  vpu_test_report.hpp  vpu_test_tool.cpp  vpu_test_tool.hpp
tests/functional/single_layer_tests/: avg_pool14.cpp  convert_like.cpp  detection_output.cpp  dpu_concat.cpp  dynamic_concat.cpp  dynamic_gather.cpp  dynamic_interpolate.cpp  dynamic_non_max_suppression.cpp  dynamic_pad.cpp  dynamic_shape_handling.cpp  dynamic_strided_slice.cpp  dynamic_unsqueeze.cpp  eltwise_ops.cpp  fake_quantize_two_axes.cpp  fake_quantize_with_axis.cpp  flash_attention_tile.cpp  group_conv_backpropdata_test.cpp  max_pool14.cpp  mvn_with_axes2.cpp  mvn_with_dynamic.cpp  non_zero.cpp  roll_test.cpp  scaled_dot_product_attention.cpp  scaled_dot_product_attention_decomposition.cpp  scatter_nd_update.cpp  software_sdpa.cpp  squeeze15.cpp  sub_byte_quant.cpp
tests/functional/subgraph_tests/: abs_multiply_softplus.cpp  add_with_relu_3d.cpp  add_with_transpose.cpp  attention.cpp  autopad.cpp  avg_pool_activation.cpp  avg_pool_activation_quantized.cpp  avg_pool_with_conv.cpp  avg_pool_with_static_scale.cpp  conv2d_in_mixed_mode.cpp  conv_activation_quantized.cpp  conv_backprop_with_bias.cpp  conv_backprop_with_transpose.cpp  conv_dwconv_quantized_new_weight_tables.cpp  conv_interpolate_concat.cpp  conv_interpolate_transpose.cpp  conv_multiply.cpp  conv_softmax_conv.cpp  conv_tanh.cpp  conv_with_transpose.cpp  conv_zero_point_table.cpp  convert_to_quantize.cpp  decompose_istft.cpp  decompose_matmul_per_channel.cpp  decompose_matmul_per_tensor.cpp  decompose_stft.cpp  depth_to_space.cpp  dilated_conv_convert.cpp  dilated_convolution.cpp  dpu_expand.cpp  dpu_with_convert.cpp  dyn_dequantize.cpp  dynamic_add_with_shapeof.cpp  dynamic_conv_bias_conv.cpp  dynamic_lstm_sequence.cpp  dynamic_maxpool.cpp  dynamic_pad_subgraph.cpp  dynamic_reshape.cpp  (+87 more)
tests/lit/: CMakeLists.txt  lit.local.cfg
tests/unit/: CMakeLists.txt  precomp.hpp
tools/bytecode_interpreter/: CMakeLists.txt  bytecode_interpreter.cpp
tools/clang_tidy_plugin/: CMakeLists.txt  module.cpp
tools/infer_tool/: CMakeLists.txt  README.md  infer_tool.cpp
tools/npureg-tblgen/: CMakeLists.txt  main.cpp
tools/profiling_parser/: CMakeLists.txt  prof_parser.cpp
tools/vpux-translate/: CMakeLists.txt  vpux-translate.cpp
(+7042 files in other folders)
